--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,10 +8,19 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <!-- Category Filter -->
+  <div>
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+      <!-- Dynamically populated categories -->
+    </select>
+  </div>
+
   <!-- Quote Display -->
   <div id="quoteDisplay"></div>
 
-  <!-- Buttons for actions -->
+  <!-- Action Buttons -->
   <button id="newQuote">Show New Quote</button>
   <button id="exportQuotes">Export Quotes</button>
 
